# glassos

./: .github  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  apps  assets  boot  browser  build  compatibility  core  design  desktop  docs  drivers  filesystem  include  installer  iso  kernel  kernel.c  kernel.h  launcher  libraries  main.c  memory.c  memory.h  out  scripts  services  settings  src  terminal  tests  third_party  (+2 more)
applications/: application.cpp  application.h  application_launcher.cpp  application_launcher.h  application_manager.cpp  application_manager.h
boot/: boot.c
browser/: CMakeLists.txt  browser.c  browser.h
browser/ core/: bookmark_manager.c  browser_engine.c  browser_engine.h  render_engine.h
browser/bookmark/: bookmark_manager.h
browser/download/: download_manager.c  download_manager.h
browser/network/: http_client.c  http_client.h
browser/parser/: html_parser.c  html_parser.h
browser/private/: private_mode.c  private_mode.h
browser/renderer/: render_engine.c
browser/tabs/: tab_manager.c  tab_manager.h
compatibility/: atp_loader.c  atp_loader.h  elf_loader.c  elf_loader.h  exe_loader.c  exe_loader.h  smart_atp_engine.c  smart_atp_engine.h
converter/: converter.c  converter.h
core/: interrupt.c  memory.c  memory.h  process.c  process.h  scheduler.c  scheduler.h  system.c  system.cpp  system.h  timer.c
desktop/: desktop_manager.cpp  desktop_manager.h  desktop_session.cpp  desktop_session.h  notification_center.cpp  notification_center.h  quick_center.cpp  (+9 more)
(+240 files in other folders)
